--- a/workcell_gazebo/package.xml
+++ b/workcell_gazebo/package.xml
@@ -50,10 +50,15 @@
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
 
+  <depend>gazebo_ros</depend>
+
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
 
+    <gazebo_ros 
+      gazebo_model_path="${prefix}/meshes"
+    />
   </export>
 </package>
